Fix left/right alignment of block: image

--- a/style.css
+++ b/style.css
@@ -4302,11 +4302,11 @@ a.to-the-top > * {
 
 	/* ALIGNMENT CLASSES */
 
-	.alignleft {
+	.entry-content .alignleft {
 		margin-left: calc(( 100vw - 58rem - 8rem ) / -2);
 	}
 
-	.alignright {
+	.entry-content .alignright {
 		margin-right: calc(( 100vw - 58rem - 8rem ) / -2);
 	}
 
@@ -5622,11 +5622,11 @@ a.to-the-top > * {
 
 	/* ALIGNMENT CLASSES */
 
-	.alignleft {
+	.entry-content .alignleft {
 		margin-left: -31rem;
 	}
 
-	.alignright {
+	.entry-content .alignright {
 		margin-right: -31rem;
 	}
 
